--- a/index.htm
+++ b/index.htm
@@ -30,7 +30,7 @@
                     <a class="nav-link" href="#">Services</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Porfolio</a>
+                    <a class="nav-link" href="#">Portfolio</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Blog</a>
@@ -44,8 +44,8 @@
         </nav>
 
         <div class="card my-5 border-0 align-items-center">
-          <font size="60">
-            Coming Soon!
+          <font size="60" color="#777D71">
+            ...coming soon!
         </font>
         </div>
      </header>
